oxiplate-derive/tests/broken/for/for-self.stderr
error: `self` is a reserved keyword
 --> tests/broken/for/for-self.rs:4:28
  |
4 | #[oxiplate_inline("{%- for self in numbers -%}{{ self }}{% endfor %}")]
  |                            ^^^^
